<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/story_image"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:contentDescription="@string/story_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/storyfoto" />

    <TextView
        android:id="@+id/story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_story"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/story_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_story"
        android:paddingTop="4dp" />

</LinearLayout>
