<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.MainActivity">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:text="@string/nama_orang"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/baseline_language_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_logo"
        app:layout_constraintEnd_toStartOf="@id/iv_logout"
        app:layout_constraintTop_toTopOf="@id/tv_logo"
        android:contentDescription="@string/language"/>

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintBottom_toBottomOf="@id/tv_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_logo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        tools:listitem="@layout/item_row_story"
        app:layout_constraintTop_toBottomOf="@id/tv_logo"
        app:layout_constraintBottom_toTopOf="@id/fab_add_story"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ivmaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/btn_tambah_story"
        android:src="@drawable/baseline_map_24"
        app:layout_constraintBottom_toTopOf="@+id/fab_add_story"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/btn_tambah_story"
        android:backgroundTint="@color/blue"
        android:src="@drawable/baseline_control_point_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/white"/>

    <ProgressBar
        android:id="@+id/progress_indicator"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:visibility="gone"
        android:indeterminateTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
